--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,31 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <!--(start) for package jar with dependencies -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>
-                                expr.ParquetGenerator
-                            </mainClass>
+                            <mainClass>expr.ParquetGenerator</mainClass>
                         </manifest>
                     </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+            <!--(end) for package jar with dependencies -->
         </plugins>
     </build>
     <dependencies>
