--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,15 @@
             <!--(end) for package jar with dependencies -->
         </plugins>
     </build>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.18.Final</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
@@ -65,6 +74,8 @@
             <artifactId>spark-sql_2.11</artifactId>
             <version>2.3.0</version>
         </dependency>
+
     </dependencies>
+
 
 </project>
