--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
             <artifactId>spark-sql_2.11</artifactId>
             <version>2.3.0</version>
         </dependency>
-
+        <dependency>
+        	<groupId>net.sourceforge.javacsv</groupId>
+        	<artifactId>javacsv</artifactId>
+        	<version>2.1</version>
+        </dependency>
     </dependencies>
 
 
