--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,13 @@
                     <archive>
                         <manifest>
                             <!--<mainClass>expr.nodevice.ParquetGenerator</mainClass>-->
-                            <mainClass>expr.nodevice.ORCGenerator</mainClass>
+                            <!--<mainClass>expr.nodevice.ORCGenerator</mainClass>-->
                             <!--<mainClass>expr.TsFileGenerator</mainClass>-->
+                            <!--<mainClass>expr.nodevice.CSVGenerator</mainClass>-->
+                            <!--<mainClass>expr.DataGenPrepare</mainClass>-->
+                            <!--<mainClass>expr.generatefromcsv.OrcGeneratorFromCSV</mainClass>-->
+                            <!--<mainClass>expr.generatefromcsv.TsFileGeneratorFromCSV</mainClass>-->
+                            <mainClass>expr.generatefromcsv.ParquetGeneratorFromCSV</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -82,6 +87,11 @@
             <groupId>org.apache.orc</groupId>
             <artifactId>orc-core</artifactId>
             <version>1.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
         </dependency>
 
     </dependencies>
